<resources>
    <string name="app_name">BaseDatosLibros</string>
    <string name="txt_codigo">Codigo del libro</string>
    <string name="txt_nombre">Nombre del libro</string>
    <string name="txt_autor">Autor del libro</string>
    <string name="txt_editorial">Editorial del libro</string>
    <string name="btn_guardar">Guardar libro</string>
    <string name="btn_modificar">Modificar libro</string>
    <string name="btn_buscar">Buscar libro</string>
    <string name="btn_eliminar">Eliminar libro</string>
    <string name="btn_limpiar">Limpiar campos</string>
</resources>